# dissRxctangle

./: CMakeLists.txt
include/: geometry.h  glapp.h
shaders/: vert.glsl
src/: glapp.cpp  main.cpp  shader.cpp
